# rust-xhb-benchmarking

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: README.md
db/postgres/: README.md  schema.sql
docs/: CLEANUP.md  methodology.md  workload-spec.md
harness/: run.py  run.sh
rust/: Cargo.toml
rust/xhb-bench/: Cargo.toml
rust/xhb-bench/src/: lib.rs  model.rs  phases.rs
xharbour/: DBF-SCHEMA.md  README.md  build.sh
xharbour/scripts/: clean-workdir.sh  install-toolchain.sh
xharbour/src/: b0.prg  b1.prg  b2.prg  b3.prg  b4.prg  b5.prg  b6.prg  canon_helpers.prg  json_helpers.prg  line_reader.prg
