[package]
name = "xhb-bench"
version = "0.1.0"
edition = "2021"
description = "Rust side of xHarbour vs Rust benchmarks (B0–B6, tokio-postgres)"

[lib]
name = "xhb_bench"
path = "src/lib.rs"

[[bin]]
name = "bench-b0"
path = "src/bin/bench-b0.rs"

[[bin]]
name = "bench-b1"
path = "src/bin/bench-b1.rs"

[[bin]]
name = "bench-b2"
path = "src/bin/bench-b2.rs"

[[bin]]
name = "bench-b3"
path = "src/bin/bench-b3.rs"

[[bin]]
name = "bench-b4"
path = "src/bin/bench-b4.rs"

[[bin]]
name = "bench-b5"
path = "src/bin/bench-b5.rs"

[[bin]]
name = "bench-b6"
path = "src/bin/bench-b6.rs"

[dependencies]
anyhow = "1"
bincode = "1.3"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util"] }
tokio-postgres = "0.7"
